HTML 제목 및 구조 변경: '공미남은 미남'을 'TEAM DISTRIBUTOR'로 수정하고, 루트 요소 추가

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>공미남은 미남</title>
+  <title>TEAM DISTRIBUTOR</title>
 </head>
 <body>
-  <h1>공미남은 미남</h1>
+  <div id="root">
+    <h1>TEAM DISTRIBUTOR</h1>
+  </div>
+  <script>
+    const root = document.getElementById('root');
+    root.innerHTML = '<h1>TEAM DISTRIBUTOR</h1>';
+  </script>
 </body>
 </html>
